# secure_player

./: README.md  pubspec.yaml
integration_test/: simple_test.dart
lib/: main.dart
lib/core/crypto/: token_security.dart
lib/core/di/: injection_container.dart
lib/core/error/: app_exceptions.dart
lib/core/network/: api_client.dart  certificate_pinning.dart
lib/core/utils/: globals.dart
lib/features/auth_license/data/: auth_repository.dart
lib/features/auth_license/presentation/bloc/: auth_bloc.dart  (+2 more)
lib/features/dashboard/data/: dashboard_repository.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: ffi_bridge.rs  frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_secure_player.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_secure_player.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+20 files in other folders)
