[package]
name = "rust_lib_secure_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
aes-gcm = "0.10.3"
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
tower-http = { version = "0.5.2", features = ["fs", "cors", "set-status", "trace"] }
lazy_static = "1.4.0"
tokio-stream = "0.1.15"
bytes = "1.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
