[package]
name = "rust_lib_secure_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
aes = "0.8.3"
ctr = "0.9.2"
libc = "0.2.153"
libloading = "0.8.3"
lazy_static = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }